Minor improvement to demo
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@587 941e2c2b-deac-454f-805a-451daa25f33c

--- a/README
+++ b/README
@@ -28,9 +28,9 @@ pointers to the Speller constructor, eg.:
 		}
 	hfst_ol::Speller * speller;
 	try {
-	speller = hfst_ol::Speller(error, lexicon);
+		speller = new hfst_ol::Speller(error, lexicon);
 	} catch (hfst_ol::AlphabetTranslationException& e) {
-	/* problem with translating between the two alphabets */
+		/* problem with translating between the two alphabets */
 	}
 
 
