Made example formatting in README more consistent - I may have broken Tommi's commit a bit, but I think it's ok now...
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@588 941e2c2b-deac-454f-805a-451daa25f33c

--- a/README
+++ b/README
@@ -20,8 +20,7 @@ pointers to the Speller constructor, eg.:
 	try {
 		error = new hfst_ol::Transducer(error_source);
 		lexicon = new hfst_ol::Transducer(lexicon_file);
-	} catch (hfst_ol::TransducerParsingException& e)
-		{
+	} catch (hfst_ol::TransducerParsingException& e) {
 			/* problem with transducer file, usually completely
 			different type of file - there's no magic number
 			in the header to check for this */
