--- a/README
+++ b/README
@@ -13,6 +13,14 @@ and compile your project with
 
 	-lhfst-ospell
 
+Dependencies:
+	-libxml2
+	(from the gnome project, eg. the package libxml++2.6-dev in Debian)
+	-zlib
+	(a compression library, eg. the package zlib1g-dev in Debian)
+	-libarchive
+	(eg. the package libarchive-dev in Debian)
+
 The library lives in a namespace called hfst_ol. Pass (weighted!) Transducer
 pointers to the Speller constructor, eg.:
 
