Fix documentation and set for 0.2.1 release
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@2553 941e2c2b-deac-454f-805a-451daa25f33c

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,6 @@ This lists authors relevant for copyright issues. See also THANKS.
 Listing is alphabetically sorted.
 
 Sam Hardwick
+Tommi A Pirinen <tommi.pirinen@helsinki.fi>
+Sjur Nørstebo Moshagen
+
