Prepare files for 0.2.2
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@3129 941e2c2b-deac-454f-805a-451daa25f33c

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,13 @@
 This file contains all noteworthy changes in HFST-ospell development between
 releases.  For full listing of changes see ChangeLog.
 
+Noteworthy changes in 0.2.2
+---------------------------
+
+* Memory and speed improvements; data structures for automaton changed
+
+* Tests and bug fixes for building
+
 Noteworthy changes in 0.2.1
 ---------------------------
 
