Renamed the hfstospell package and variables to what they used to be, in case that can help solve a build issue with libvoikko+hfst.
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@3316 941e2c2b-deac-454f-805a-451daa25f33c

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,12 @@
 This file contains all noteworthy changes in HFST-ospell development between
 releases.  For full listing of changes see ChangeLog.
 
+Noteworthy changes in 0.2.4
+---------------------------
+
+* renamed the package hfstospell (from hfst-ospell), the previous rename caused
+  build issues.
+
 Noteworthy changes in 0.2.3
 ---------------------------
 
