Document for next release candidate
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@3629 941e2c2b-deac-454f-805a-451daa25f33c

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,16 @@
-======================
- NEWS for hfst-ospell
-======================
+NEWS for hfst-ospell
+====================
 
 This file contains all noteworthy changes in HFST-ospell development between
 releases.  For full listing of changes see ChangeLog.
+
+Noteworthy changes in 0.2.5
+---------------------------
+
+* optional support for tinyxml2
+* preliminary support for two-tape automata and *analysis* lookup
+* conference demos are no longer built by default
+* libarchive newer than 3 allowed
 
 Noteworthy changes in 0.2.4
 ---------------------------
@@ -50,3 +57,5 @@ Noteworthy changes in 0.1
 -------------------------
 
 * First release
+
+
