Added section header, correct tool name to man page.
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@4622 941e2c2b-deac-454f-805a-451daa25f33c

--- a/hfst-ospell-office.1
+++ b/hfst-ospell-office.1
@@ -2,10 +2,11 @@
 .SH NAME
 hfst-ospell-office \- Spell checker tool based on HFST
 .SH SYNOPSIS
-.B hfstospell
-[\fIOPTIONS\fR] [\fIZHFST-ARCHIVE\fR]
+.B hfst-ospell-office
+[\fIOPTIONS\fR] \fIZHFST-ARCHIVE\fR
 .SH DESCRIPTION
 Use automata in ZHFST\-ARCHIVE or from OPTIONS to check and correct
+.SH OPTIONS
 .TP
 \fB\-\-verbatim\fR
 Check the input as-is without any transformations
