--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,12 @@ NEWS for hfst-ospell
 This file contains all noteworthy changes in HFST-ospell development between
 releases.  For full listing of changes see ChangeLog.
 
+Noteworthy changes in 0.4.1
+---------------------------
+
+* set time cutoff to 6.0 seconds for ospell-office
+* minor bug fixes
+
 Noteworthy changes in 0.4.0
 ---------------------------
 
