--- a/README
+++ b/README
@@ -1,46 +1,40 @@
-.. -*- mode: rst -*-
-================================================
- Hfst-ospell library and toy commandline tester
-================================================
+# Hfst-ospell library and toy commandline tester
 
 This is a minimal hfst optimized lookup format based spell checker library and
 a demonstrational implementation of command line based spell checker. The
 library is licenced under Apache licence version 2, other licences can be
 obtained from University of Helsinki.
 
+[![Build Status](https://travis-ci.org/hfst/hfst-ospell.svg?branch=master)](https://travis-ci.org/hfst/hfst-ospell)
 
-Dependencies
-============
+## Dependencies
 
- - libxml++2
- - libarchive
+- libxml++2
+- libarchive
 
-Debian packages for dependencies
---------------------------------
+## Debian packages for dependencies
 
-  - libxml++2-dev
-  - libarchive-dev
+- libxml++2-dev
+- libarchive-dev
 
-Usage
-=====
+## Usage
 
-Usage in external programs::
+Usage in external programs:
 
     #include <ospell.h>
 
-and compile your project with::
+and compile your project with:
 
     $(pkg-config --cflags hfstospell)
 
-and link with::
+and link with:
 
     $(pkg-config --libs hfstospell)
 
-Programming examples
---------------------
+## Programming examples
 
 The library lives in a namespace called hfst_ol. Pass (weighted!) Transducer
-pointers to the Speller constructor, eg.::
+pointers to the Speller constructor, eg.:
 
     FILE * error_source = fopen(error_filename, "r");
     FILE * lexicon_file = fopen(lexicon_filename, "r");
@@ -62,7 +56,7 @@ pointers to the Speller constructor, eg.::
     }
 
 
-And use the functions::
+And use the functions:
 
     // returns true if line is found in lexicon
     bool hfst_ol::Speller::check(char * line);
@@ -73,10 +67,9 @@ And use the functions::
 
 to communicate with it. See main.cc for a concrete usage example. 
 
-Command-line tool
------------------
+## Command-line tool
 
-Main.cc provides a demo utility with the following help message::
+Main.cc provides a demo utility with the following help message:
 
     Usage: hfst-ospell [OPTIONS] ERRORSOURCE LEXICON
     Run a composition of ERRORSOURCE and LEXICON on standard input and
@@ -91,11 +84,9 @@ Main.cc provides a demo utility with the following help message::
 
     Report bugs to hfst-bugs@ling.helsinki.fi
 
-Use in real-world applications
-------------------------------
+# Use in real-world applications
 
 The HFST based spellers can be used in real applications with help of
-`voikko <http://voikko.sf.net>`_. Voikko in turn can be used with enchant,
+[voikko](http://voikko.sf.net). Voikko in turn can be used with enchant,
 libreoffice, and firefox.
 
-.. vim: set ft=rst:
