--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,11 @@ NEWS for hfst-ospell
 This file contains all noteworthy changes in HFST-ospell development between
 releases.  For full listing of changes see ChangeLog.
 
+Noteworthy changes in 0.4.2
+---------------------------
+
+* small modifications to tests and documentation
+
 Noteworthy changes in 0.4.1
 ---------------------------
 
