Update copyright and authors listing

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,9 +3,9 @@ Authors of HFST ospell
 
 This lists authors relevant for copyright issues. See also THANKS.
 
-Listing is alphabetically sorted.
-
-Sam Hardwick
-Tommi A Pirinen <tommi.pirinen@helsinki.fi>
-Sjur Nørstebo Moshagen
-
+2012-2017, Erik Axelson <erik.axelson@helsinki.fi>
+2010-2016, Sam Hardwick <sam.hardwick@gmail.com>
+2015-2017, Tino Didriksen <mail@tinodidriksen.com>
+2010-2016, Sjur Nørstebø Moshagen <sjur.n.moshagen@uit.no>
+2010-2016, Tommi Pirinen <flammie@iki.fi>
+2013, Francis M. Tyers <ftyers@prompsit.com>
